--- a/wiki/License.wiki
+++ b/wiki/License.wiki
@@ -1,29 +1,22 @@
 #labels license,bsd,suproject
 Copyright (c) 2009, RadiAnt Foundation, Isaque Dutra and Victor Hugo Melo Borges
-
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
-
 modification, are permitted provided that the following conditions are met:
 
 
-
-* Redistributions of source code must retain the above copyright
-
+# Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
 
-* Redistributions in binary form must reproduce the above copyright
-
+# Redistributions in binary form must reproduce the above copyright
 notice, this list of conditions and the following disclaimer in the
-
 documentation and/or other materials provided with the distribution.
 
-* Neither the name of the RadiAnt Foundation nor the
-
+# Neither the name of the RadiAnt Foundation nor the
 names of its contributors may be used to endorse or promote products
-
 derived from this software without specific prior written permission.
+
 
 THIS SOFTWARE IS PROVIDED BY RADIANT FOUNDATION ''AS IS'' AND ANY
 
